[feat] message queue publisher + redis caching done
