# deepsearch/src/app/main.py
@@ -1,22 +1,24 @@
 from contextlib import asynccontextmanager
+import json
 import logging
-import requests
-import torch
-import clip
-from PIL import Image
-import logging
-from fastapi import FastAPI, File, UploadFile
+import threading
+from fastapi import FastAPI, File, Query, UploadFile
 from fastapi.middleware.cors import CORSMiddleware
 
+from src.executions.caching.redis import RedisManager
 from src.storage.image.handler import get_image_database, save_image_to_db
 from src.storage.document.handler import get_document_database, save_document_to_db
 from src.models.bert import BertModel
 from src.models.clip import ClipModel
-from src.schema.dtypes import DocumentDto, FeatureModel, ImageDto, JournalModel, TextModel, TextsModel, ImageListModel, ImageModel, ImageUrlModel
+from src.schema.dtypes import DocumentDto, ImageDto, QueryModel, TextModel
 from typing import Any, Dict, List, Annotated
 from io import BytesIO
 
 from src.core.config import app_config
+
+from src.executions.event_handler.consumer.consumer import consumer
+
+logging.basicConfig(level=logging.INFO)
 
 
 @asynccontextmanager
@@ -30,6 +32,14 @@ async def lifespan(app: FastAPI):
 
     app.state.bert_model = BertModel(bert_model_name)
     app.state.bert_model.load_model()
+    
+    logging.info("Starting consumer thread")
+    consumer_thread = threading.Thread(
+        target=consumer, 
+        args=(app.state.clip_model, app.state.bert_model,), 
+        daemon=True
+    )
+    consumer_thread.start()
 
     yield
 
@@ -38,6 +48,8 @@ async def lifespan(app: FastAPI):
 
 
 app = FastAPI(lifespan=lifespan)
+
+redis_manager = RedisManager(app_config.redis_host)
 
 origins = [
     "http://localhost",
@@ -55,22 +67,50 @@ app.add_middleware(
 
 @app.get("/")
 def read_root() -> Dict[str, str]:
-    return {"API Name": app.state.model_name }
+    return {"API Name": "PGVector API"}
 
 
 @app.get("/api/v1/query/")
-def query_data(query: TextModel) -> Any:
-    logging.info(f"Querying data with {query.text}")
-    query = query.text
+def query_data(
+    username: str = Query(...),
+    text: str = Query(...),
+    limit: int = Query(...)
+) -> Any:
+    logging.info(f"Querying data with {text}")
+    
+    query = QueryModel(username=username, text=text, limit=limit)
+    
+    # Generate a unique cache key based on the query parameters
+    cache_key = f"{username}-{text}-{limit}"
+    cached_response = redis_manager.get(cache_key)
+    if cached_response:
+        logging.info("Returning cached response")
+        return json.loads(cached_response)
+    
     images = get_image_database(app.state.clip_model, query)
-    return {"images": [image.id for image in images]}
-
+    texts = get_document_database(app.state.bert_model, query)
+    
+    response = {
+        "images": [image.image_id for image in images],
+        "journals": [text.journal_id for text in texts]
+    }
+    
+    redis_manager.set(cache_key, json.dumps(response), app_config.cache_expire)
+    
+    return response
+    
 
 @app.post("/api/v1/document")
 async def encode_document(data: DocumentDto) -> TextModel:
     logging.info(f"Encoding document")
-    save_document_to_db(app.state.bert_model, data)
-    return {"message": "Save chunk to database completed"}
+    save_document_to_db(
+        app.state.bert_model, 
+        {
+            "content": data.content,
+            "journal_id": data.journal_id
+        }
+    )
+    return TextModel(text="Save chunk to database completed")
 
 
 @app.post("/api/v1/image")
