# deepsearch/src/storage/image/model.py
@@ -1,7 +1,7 @@
 from typing import Dict, List, Type
 from pgvector.sqlalchemy import Vector
 from sqlalchemy.dialects.postgresql import BYTEA
-from sqlalchemy import BigInteger, Column, DateTime, Integer, func, text
+from sqlalchemy import BigInteger, Column, DateTime, Integer, func, text, String
 from sqlalchemy.ext.declarative import declarative_base
 
 Base = declarative_base()
@@ -10,8 +10,9 @@ Base = declarative_base()
 class ImageModel(Base):
     __tablename__ = "image"
     id = Column(BigInteger, primary_key=True, index=True, autoincrement=True)
+    image_id = Column(BigInteger, nullable=False)
     journal_id = Column(Integer, nullable=False)
-    content = Column(BYTEA, nullable=False, default="")
+    username = Column(String, nullable=False)
     embedding = Column(Vector(768), nullable=False)
     created_at = Column(DateTime(timezone=False), server_default=func.now())
     updated_at = Column(
