# journal/gapi/server.go
@@ -2,11 +2,18 @@ package gapi
 
 import (
 	"context"
+	// "encoding/json"
 	"fmt"
+	"log/slog"
 	"remind/journal/db/sqlc"
 	"remind/journal/pb"
 	"remind/journal/util"
 
+	// event "remind/journal/event"
+	pkgPublisher "remind/pkg/rabbitmq/publisher"
+	pkgConsumer "remind/pkg/rabbitmq/consumer"
+
+	amqp "github.com/rabbitmq/amqp091-go"
 	"google.golang.org/grpc/metadata"
 )
 
@@ -14,10 +21,16 @@ type Server struct {
 	pb.UnimplementedJournalRemindServer
 	config          util.Config
 	store           db.Store
-	authorization   func(ctx context.Context, username string) error 
+	authorization   func(ctx context.Context, username string) error
+	AMQPConn  		*amqp.Connection
+	Publisher 		pkgPublisher.EventPublisher
+	Consumer 		pkgConsumer.EventConsumer
 }
 
-func NewServer(config util.Config, store db.Store) (*Server, error) {
+func NewServer(
+	config util.Config, store db.Store, amqpConn *amqp.Connection, 
+	publisher pkgPublisher.EventPublisher, consumer pkgConsumer.EventConsumer,
+) (*Server, error) {
 	authorization := func (ctx context.Context, username string) error {
 		md, ok := metadata.FromIncomingContext(ctx)
 		if !ok {
@@ -37,6 +50,77 @@ func NewServer(config util.Config, store db.Store) (*Server, error) {
 		config:          config,
 		store:           store,
 		authorization:   authorization,
+		AMQPConn:        amqpConn,
+		Publisher:       publisher,
+		Consumer:        consumer,
 	}
+
 	return server, nil
+}
+
+func (s *Server) Worker(ctx context.Context, messages <-chan amqp.Delivery) {
+	for delivery := range messages {
+		slog.Info("processDeliveries", "delivery_tag", delivery.DeliveryTag)
+		slog.Info("received", "delivery_type", delivery.Type)
+
+		// switch delivery.Type {
+		// case "image-embedded":
+		// 	var payload event.ImageEmbedded
+
+		// 	err := json.Unmarshal(delivery.Body, &payload)
+		// 	if err != nil {
+		// 		slog.Error("failed to Unmarshal message", err)
+		// 	}
+
+		// 	arg := db.UpdateImageEmbeddingStatusParams{
+		// 		ID:       	payload.ID,
+		// 		IsEmbedded: true,
+		// 	}
+
+		// 	_, err = s.store.UpdateImageEmbeddingStatus(ctx, arg)
+		// 	if err != nil {
+		// 		if err = delivery.Reject(false); err != nil {
+		// 			slog.Error("failed to delivery.Reject", err)
+		// 		}
+
+		// 		slog.Error("failed to process delivery", err)
+		// 	} else {
+		// 		err = delivery.Ack(false)
+		// 		if err != nil {
+		// 			slog.Error("failed to acknowledge delivery", err)
+		// 		}
+		// 	}
+		// case "journal-updated":
+		// 	var payload event.JournalEmbedded
+
+		// 	err := json.Unmarshal(delivery.Body, &payload)
+		// 	if err != nil {
+		// 		slog.Error("failed to Unmarshal message", err)
+		// 	}
+
+		// 	arg := db.UpdateJournalParams{
+		// 		ID:        	payload.ID,
+		// 		IsEmbedded: true,
+		// 	}
+
+		// 	_, err = s.store.UpdateJournal(ctx, arg)
+
+		// 	if err != nil {
+		// 		if err = delivery.Reject(false); err != nil {
+		// 			slog.Error("failed to delivery.Reject", err)
+		// 		}
+
+		// 		slog.Error("failed to process delivery", err)
+		// 	} else {
+		// 		err = delivery.Ack(false)
+		// 		if err != nil {
+		// 			slog.Error("failed to acknowledge delivery", err)
+		// 		}
+		// 	}
+		// default:
+		// 	slog.Info("default")
+		// }
+	}
+
+	slog.Info("Deliveries channel closed")
 }
